Updated a few bugs

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
   "description": "A browser extension that adds a whiteboard into sparx!",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
   "background": {
     "service_worker": "script/background.js"
   },
