--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,12 @@
   "background": {
     "service_worker": "script/background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["script/content.js"]
+    }
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": "images/icons/icon16.png"
