--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://maths.sparx-learning.com/*"],
-      "js": ["script/independentL.js", "script/whiteboard.js", "script/settings.js"],
-      "css": ["css/sparxMath.css"]
+      "js": ["script/independentL.js", "script/whiteboard.js", "script/settings.js"]
     }
   ],
   "action": {
