--- a/manifest.json
+++ b/manifest.json
@@ -9,10 +9,19 @@
     "tabs",
     "storage"
   ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "chrome-extension://flkpmaekegihajhekalhlfeoflhengcj/script/settings.html"
+      ],
+      "matches": ["<all_urls>", "chrome-extension://flkpmaekegihajhekalhlfeoflhengcj/*"],
+      "extension_ids": ["*"]
+    }
+  ],
   "content_scripts": [
     {
       "matches": ["https://maths.sparx-learning.com/*"],
-      "js": ["script/independentL.js", "script/whiteboard.js", "script/settings.js"],
+      "js": ["script/data.js", "script/independentL.js", "script/whiteboard.js", "script/settings.js"],
       "css": ["css/sparxMath.css"]
     }
   ],
