dark mode slider

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "content_scripts": [
     {
       "matches": ["https://maths.sparx-learning.com/*"],
-      "js": ["script/data.js", "script/independentL.js", "script/whiteboard.js", "script/settings.js", "script/darkmode.js"],
+      "js": ["script/data.js", "script/independentL.js", "script/darkmode.js", "script/settings.js", "script/whiteboard.js"],
       "css": ["css/sparxMath.css"]
     }
   ],
